# navarro_blog_api

./: .dockerignore  .env.example  .gitignore  .tool-versions  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  commit_docs.md  docker-compose.yml  nginx.conf  readme.MD  routes.http  swagger.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: api.yml  devskim.yml  docker-build.yml  docker-image.yml  docker-publish.yml  docker.yml  ethicalcheck.yml  microsoft-defender.yml  osv-scanner.yml  rust-clippy.yml  rust.yml
ci/: docker.yml
migrations/20240530181229_create_posts/: up.sql
migrations/20240530181637_create_users/: up.sql
migrations/20240530181926_create_comments/: up.sql
migrations/20240530182156_create_tags/: up.sql
migrations/20240530182301_create_categories/: up.sql
migrations/20240530182415_create_users_comments_likes/: up.sql
migrations/20240530182605_create_users_posts_likes/: up.sql
migrations/20240530182744_create_posts_tags/: up.sql
migrations/20240530182924_create_posts_categories/: up.sql
migrations/20240616181600_create_salt/: up.sql
src/: lib.rs  main.rs
src/config/: api_doc.rs  cors.rs  mod.rs  postgres.rs  queue.rs  redis.rs
src/controllers/: hello_world.rs  user.rs
src/dtos/: tag.rs  user.rs
src/exceptions/: custom_error_to_io_error_kind.rs
src/infra/: postgres.rs  redis.rs
src/middlewares/: auth_middleware.rs  email_exists.rs  id_param_validator.rs  jwt_token_middleware.rs  mod.rs  uuid_path_middleware.rs
src/migrations/20240530181229_create_posts/: up.sql
src/migrations/20240530181637_create_users/: up.sql
src/migrations/20240530182156_create_tags/: up.sql
src/migrations/20240530182301_create_categories/: up.sql
src/modules/: mod.rs
src/modules/category/: category_dto.rs  mod.rs
src/modules/comment/: comment_dto.rs  mod.rs
src/modules/post/: mod.rs  post_dto.rs
src/modules/tag/: mod.rs
src/modules/user/: mod.rs  user_controllers.rs  user_dtos.rs  user_providers.rs  user_queues.rs  user_repositories.rs  user_serdes.rs  user_services.rs
src/providers/: email_exists.rs
src/repositories/: user.rs
src/services/: user.rs
src/shared/: mod.rs
src/shared/exceptions/: custom_error_to_io_error_kind.rs  exception.rs  exceptions.rs  mod.rs
src/shared/structs/: error_struct.rs  jwt_claims.rs  mod.rs  query_params.rs
src/shared/treaties/: bcrypt_treated.rs  jwt_treated.rs  mod.rs  strip_suffix_treated.rs
src/utils/: error_construct.rs  mod.rs  password_verifier.rs  query_constructor_executor.rs  validate_body_error.rs
tests/: hello_world_test.rs  middlewares_spec.rs  user_integration_test.rs  user_spec.rs  user_test.rs  user_unit_test.rs
tests/mocks/: functional_tester.rs  mod.rs
tests/mocks/enums/: db_table.rs  mod.rs
tests/mocks/models/: jwt.rs  mod.rs  postgres.rs  redis.rs  user.rs
tests/mocks/structs/: user.rs
