[package]
name = "navarro_blog_api"
version = "0.1.0"
edition = "2021"
description = "A API Blog é uma aplicação de desenvolvimento web focada em fornecer funcionalidades para gerenciar e interagir com o conteúdo de um blog pessoal por meio de chamadas programáticas."
license = "MIT"
readme = "README.md"
authors = [
  "Victor Navarro <victor.jose.lopes.navarro@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "4.2.3", features = ["actix_extras"]}
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }