[package]
name = "navarro_blog_api"
version = "0.1.0"
edition = "2021"
description = "A API Blog é uma aplicação de desenvolvimento web focada em fornecer funcionalidades para gerenciar e interagir com o conteúdo de um blog pessoal por meio de chamadas programáticas."
license = "MIT"
readme = "README.md"
authors = [
  "Victor Navarro <victor.jose.lopes.navarro@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.7.0"
anyhow = "1.0.86"
bcrypt = "0.15.1"
chrono = "0.4.38"
deadpool-postgres = "0.13.2"
deadpool-redis = { version = "0.12", features = ["serde"] }
deadqueue = "0.2.4"
env_logger = "0.10.0"
lazy_static = "1.4.0"
postgres = { version = "0.19.4", features = ["with-uuid-1"] }
regex = "1.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sql-builder = "3.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
validator = { version = "0.12", features = ["derive"] }