[package]
name = "navarro_blog_api"
version = "0.1.0"
edition = "2021"
description = "A API Blog é uma aplicação de desenvolvimento web focada em fornecer funcionalidades para gerenciar e interagir com o conteúdo de um blog pessoal por meio de chamadas programáticas."
license = "MIT"
readme = "README.md"
authors = ["Victor Navarro <victor.jose.lopes.navarro@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.7.0"
actix-cors = "0.7.0"
anyhow = "1.0.86"
bcrypt = "0.15.1"
chrono = "0.4.38"
deadpool-postgres = "0.14.0"
deadpool-redis = { version = "0.15", features = ["serde"] }
deadqueue = "0.2.4"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
postgres = { version = "0.19.4", features = ["with-uuid-1", "with-chrono-0_4"] }
regex = "1.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sql-builder = "3.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
actix-rt = "2.10.0"
